--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -1,8 +1,10 @@
-<h2>{{ expense.name }} Details</h2>
-<div><span>id: </span>{{expense.id}}</div>
-<div><span>shop: </span>{{expense.shop}}</div>
-<div><span>price: </span>{{expense.price}}</div>
-<div><span>date: </span>{{expense.date}}</div>
-<div><span>time: </span>{{expense.time}}</div>
-<div><span>payment method: </span>{{expense.paymentMethod}}</div>
-<div><span>link to document: </span>{{expense.document}}</div>
+<h2>My Expenses</h2>
+<ul class="expenses">
+  <li *ngFor="let expense of expenses" 
+  [class.selected]="expense === selectedExpense" 
+  (click)="onSelect(expense)">
+    <span class="badge">{{expense.id}}</span> {{expense.shop}}
+  </li>
+</ul>
+
+<app-expense-detail [expense]="selectedExpense"></app-expense-detail>
