expense detail component routable

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Recent Expenses</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let expense of expenses" class="col-1-4">
+  <a *ngFor="let expense of expenses" class="col-1-4" routerLink="/detail/{{expense.id}}">
     <div class="module expense">
       <h4>{{expense.shop}}</h4>
     </div>
