--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -1,10 +1,8 @@
 <h2>My Expenses</h2>
 <ul class="expenses">
-  <li *ngFor="let expense of expenses" 
-  [class.selected]="expense === selectedExpense" 
-  (click)="onSelect(expense)">
-    <span class="badge">{{expense.id}}</span> {{expense.shop}}
+  <li *ngFor="let expense of expenses">
+      <a routerLink="/detail/{{expense.id}}">
+        <span class="badge">{{expense.id}}</span> {{expense.shop}}
+      </a>
   </li>
 </ul>
-
-<app-expense-detail [expense]="selectedExpense"></app-expense-detail>
