go back button added

--- a/src/app/expense-detail/expense-detail.component.html
+++ b/src/app/expense-detail/expense-detail.component.html
@@ -8,5 +8,5 @@
         <input [(ngModel)]="expense.shop" placeholder="shop">
       </label>
     </div>
-    
+    <button (click)="goBack()">go back</button> 
   </div>
