expense detail link

--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -22,7 +22,7 @@
     <tbody>
       <tr *ngFor="let expense of expenses">
         <td>{{expense.id}}</td>
-        <td>{{expense.shop}}</td>
+        <td><a routerLink="/detail/{{expense.id}}">{{expense.shop}}</a></td>
         <td>{{expense.price}}</td>
         <td>{{expense.date}}</td>
         <td>{{expense.time}}</td>
