--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -29,16 +29,17 @@
   .module {
     padding: 20px;
     text-align: center;
-    color: #eee;
+    color: black;
     max-height: 120px;
     min-width: 120px;
-    background-color: #607d8b;
-    border-radius: 2px;
+    background-color: #fcdb4b;
+    /* background-color: #f4a440; */
+    border: 2px solid #f4a440;
+    border-radius: 4px;
   }
   .module:hover {
-    background-color: #eee;
+    background-color: #f3e7b3;
     cursor: pointer;
-    color: #607d8b;
   }
   .grid-pad {
     padding: 10px 0;
