--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500|Rubik&display=swap');
+
+h1, h2, h3 {
+font-family: 'Rubik', sans-serif;
+}
+body {
+font-family: 'Roboto', sans-serif;
+margin: 0;
+}
+.header {
+    padding: 15px 15px 25px 15px;
+}
+.header-h1 {
+    display: inline;
+    margin-right: 5px;
+}
+.header-img {
+    height: 50px;
+    position: relative;
+    top: 10px;
+}
+header {
+    display: inline-block;
+}
+nav {
+    background-color: #fcdb4b;
+}
+nav a {
+    color: black;
+    margin-right: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 3px;
+    border-radius: 4px;
+}
+nav a:hover {
+    background-color: white;
+}
+.navbar {
+    padding: 10px 0 10px 15px;
+}
+main {
+    padding-left: 15px;
+}
+input {
+    padding: 4px;
+    margin-bottom: 5px;
+    width: inherit;
+}
+label {
+    margin-right: 5px;
+}
